tdf#164803 sw: Fix SwTextSizeInfo applying grid metrics without grid

Writer has two grid attributes: the document-level grid item, which
controls whether the grid is enabled; and a paragraph-level grid item,
which controls whether the document grid applies to the paragraph.

Previously, SwTextSizeInfo populated its snap-to-grid flag based only on
the paragraph-level attribute. Downstream code was expected to
double-check that the grid is actually enabled using the document-level
item. As shown by tdf#164803, this is error-prone.

Now, SwTextSizeInfo only sets the snap-to-grid flag when the grid is
enabled by both attributes.

Change-Id: I6528f653748de942f42da11e34ff340cb3db37e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180676
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins